# jwe-cpp

./: .gitignore  CHANGELOG.md  CMakeLists.txt  Dockerfile  LICENSE  README.md
.github/workflows/: ci.yml
cmake/: jweConfig.cmake.in
docs/: ШАГИ_JWE.md
examples/: basic_usage.cpp  encrypt_payload.cpp
include/jwe/: aes_gcm.hpp  base64url.hpp  bigint.hpp  json.hpp  jwe.hpp  jwe_builder.hpp  jwks_fetcher.hpp  rsa_oaep.hpp  sha256.hpp  types.hpp
tests/: test_all.cpp
